<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="controller"
            type="edu.rosehulman.todoheap.freeevent.controller.FreeEventController" />
        <variable
            name="model"
            type="edu.rosehulman.todoheap.freeevent.input.FreeEventInputModel"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".freeevent.FreeEventActivity"

        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.TodoHeap.AppBarOverlay"

            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.TodoHeap.PopupOverlay"
                />


        </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <EditText
                android:id="@+id/input_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_event_name"
                android:text="@={model.eventName}"
                android:onFocusChange="@{(v,f)->controller.hideKeyboardOnLoseFocus(v,f)}"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={model.location}"
                android:hint="@string/form_location"
                android:onFocusChange="@{(v,f)->controller.hideKeyboardOnLoseFocus(v,f)}"
               />

            <EditText
                android:id="@+id/input_work_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_work_load"
                android:text="@={model.workLoad}"
                android:inputType="numberDecimal"
                android:onFocusChange="@{(v,f)->controller.hideKeyboardOnLoseFocus(v,f)}"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_deadline"
                style="@style/Theme.TodoHeap.FormDescription"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusableInTouchMode="true"
                >
                <Button
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/button_grey"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:text="@{@string/format_date(model.month+1,model.dayOfMonth,model.year)}"
                    android:textColor="@{model.noDeadline?@color/button_grey_disabled:@color/black}"
                    android:onClick="@{()->controller.selectDeadlineDate()}"
                    android:enabled="@{!model.noDeadline}"/>

                <Button
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/button_grey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@{model.pm?@string/format_time_pm(model.hourIn12,model.minute):@string/format_time_am(model.hourIn12,model.minute)}"
                    android:textColor="@{model.noDeadline?@color/button_grey_disabled:@color/black}"
                    android:onClick="@{()->controller.selectDeadlineTime()}"
                    android:enabled="@{!model.noDeadline}"/>
            </LinearLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_no_deadline_desc"
                android:onClick="@{(v)->controller.updateView().hideKeyboard(v)}"
                android:checked="@={model.noDeadline}"
                />



            <RadioGroup
                android:id="@+id/is_one_sitting_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >
                <RadioButton
                    android:id="@+id/is_one_sitting_false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_no_one_sitting_desc"
                    android:onClick="@{(v)->controller.hideKeyboard(v)}"
                    android:checked="@{!model.oneSitting}"
                    />
                <RadioButton
                    android:id="@+id/is_one_sitting_true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_one_sitting_desc"
                    android:onClick="@{(v)->controller.hideKeyboard(v)}"
                    android:checked="@={model.oneSitting}"
                    />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_procrastination_desc"
                style="@style/Theme.TodoHeap.FormDescription"
                />

            <Spinner
                android:id="@+id/procrastination_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:focusableInTouchMode="true"
                android:selectedItemPosition="@={model.procrastination}"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_priority_desc"
                style="@style/Theme.TodoHeap.FormDescription"
                />
            <Spinner
                android:id="@+id/priority_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:focusableInTouchMode="true"
                android:selectedItemPosition="@={model.priority}"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_enjoyablility_desc"
                style="@style/Theme.TodoHeap.FormDescription"
                />
            <Spinner
                android:id="@+id/enjoyablility_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:focusableInTouchMode="true"
                android:selectedItemPosition="@={model.enjoyability}"
                />

        </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>